# simple-cluster

./: README.md
common/: Cargo.toml
common/src/: lib.rs
commons/: Cargo.toml
commons/src/: lib.rs
http_request/: Cargo.toml
http_request/src/: lib.rs
master-node/: Cargo.toml  Dockerfile
master-node/src/: main.rs
simple-cluster-helm-chart/: Chart.yaml  values.yaml
simple-cluster-helm-chart/templates/: deployment.yaml  secrets.yaml  service.yaml
worker-node/: Cargo.toml  Dockerfile
worker-node/src/: main.rs
