[package]
name = "worker-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.7.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
http_request = { path = "../http_request" }
