[package]
name = "worker-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.7.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.22.0", features = ["full"] }
http_request = { path = "../http_request" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
